--- a/package.json
+++ b/package.json
@@ -6,20 +6,37 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier . --write"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.10.4",
     "@clerk/nextjs": "^5.4.1",
+    "@date-fns/tz": "^1.2.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mantine/hooks": "^7.15.1",
+    "@prisma/client": "^5.19.1",
+    "@saas-ui/forms": "^2.9.1",
+    "@saas-ui/react": "^2.11.2",
+    "@tanstack/react-table": "^8.20.5",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^11.13.5",
     "next": "14.2.8",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.4.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
+    "prettier": "^3.4.2",
+    "prisma": "^5.19.1",
     "typescript": "^5"
   }
 }
