--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-config-next": "14.2.8",
     "prettier": "^3.4.2",
     "prisma": "^5.19.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
