--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint",
     "format": "prettier . --write"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "@chakra-ui/react": "^2.10.4",
     "@clerk/nextjs": "^5.4.1",
