--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-table": "^8.20.5",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.13.5",
+    "fuzzysort": "^3.1.0",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
