--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
+    "ts-pattern": "^5.6.2",
+    "twilio": "^5.4.3",
     "zod": "^3.24.1"
   },
   "devDependencies": {
