--- a/.github/workflows/send-denied-entries-notifications.yml
+++ b/.github/workflows/send-denied-entries-notifications.yml
@@ -2,8 +2,9 @@ name: Send Denied Entries Notifications
 
 on:
   schedule:
-    # Every friday at 10:00pm HST. https://crontab.guru/#0_8_*_*_6
-    - cron: "0 8 * * 6"
+    # TODO: Change to every Friday.
+    # Every day at 10:00pm HST. https://crontab.guru/#0_8_*_*_6
+    - cron: "0 8 * * *"
 
 jobs:
   send_denied_entries_notifications:
