--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "exceljs": "^4.4.0",
     "framer-motion": "^11.13.5",
     "fuzzysort": "^3.1.0",
+    "jotai": "^2.12.1",
     "next": "14.2.8",
     "nextjs-toploader": "^3.7.15",
     "react": "^18",
@@ -34,7 +35,8 @@
     "react-icons": "^5.4.0",
     "ts-pattern": "^5.6.2",
     "twilio": "^5.4.3",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zod-prisma-types": "^3.2.4"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
