--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@prisma/client": "^5.19.1",
     "@saas-ui/forms": "^2.9.1",
     "@saas-ui/react": "^2.11.2",
+    "@tanstack/react-query": "^5.67.3",
     "@tanstack/react-table": "^8.20.5",
     "date-fns": "^4.1.0",
     "exceljs": "^4.4.0",
